--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 70px;
   padding: 20px;
   color: white;
 }
@@ -18,7 +13,20 @@
   font-size: large;
 }
 
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-submit {
+  border-radius: 25px;
+  background-color: #FFF4AD;
+  border-color: #FFF4AD;
+  color: black;
+  font-size: medium;
+  box-shadow:none !important;
+}
+
+.App-clear {
+  border-radius: 25px;
+  background-color: #C14B51;
+  border-color: #C14B51;
+  color: white;
+  font-size: medium;
+  box-shadow:none !important;
 }
