--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,26 @@
+@-webkit-keyframes AnimationName {
+    0%{background-position:52% 0%}
+    50%{background-position:49% 100%}
+    100%{background-position:52% 0%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:52% 0%}
+    50%{background-position:49% 100%}
+    100%{background-position:52% 0%}
+}
+@keyframes AnimationName { 
+    0%{background-position:52% 0%}
+    50%{background-position:49% 100%}
+    100%{background-position:52% 0%}
+}
+
 .App {
+  -webkit-animation: AnimationName 5s ease infinite;
+  -moz-animation: AnimationName 5s ease infinite;
+  animation: AnimationName 5s ease infinite;
   text-align: center;
+  background: linear-gradient(127deg, #17c195, #9440c3);
+  background-size: 400% 400%;
 }
 
 .App-header {
@@ -12,20 +33,21 @@
   font-size: large;
 }
 
-.App-submit {
-  border-radius: 25px;
-  background-color: #FFF4AD;
-  border-color: #FFF4AD;
-  color: black;
-  font-size: medium;
-  box-shadow:none !important;
+.App-idea-title {
+  border-radius: 0px;
 }
 
-.App-clear {
-  border-radius: 25px;
-  background-color: #C14B51;
-  border-color: #C14B51;
-  color: white;
-  font-size: medium;
-  box-shadow:none !important;
+.App-idea-body {
+  border-radius: 0px;
+}
+
+.App-idea-submit {
+  width: 100px;
+  border-radius: 0px;
+  border-width: 1px; 
+}
+
+.App-idea-clear {
+  width: 100px;
+  border-radius: 0px;
 }
