--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-image: linear-gradient(90deg, #53d6d6, #1987c6);
+  background-color: #222;
 }
